# Zenz-Android-Demo

./: README.md  settings.gradle
.github/workflows/: release.yml
app/: build.gradle
app/src/androidTest/java/com/kazumaproject/zenzandroiddemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  zenz_bridge.cpp
app/src/main/java/com/kazumaproject/zenzandroiddemo/: GenerateFragment.kt  GenerateWithContextAndConditionsFragment.kt  GenerateWithContextFragment.kt  LlamaBridge.kt  MainActivity.kt  StringExtensions.kt
app/src/main/res/layout/: activity_main.xml  fragment_generate.xml  fragment_generate_with_conditions.xml  fragment_generate_with_context.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kazumaproject/zenzandroiddemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
zenz/: build.gradle
zenz/src/main/cpp/: zenz_bridge.cpp
zenz/src/main/java/com/kazumaproject/zenz/: ZenzEngine.kt
